[tool.poetry]
name = "mypy-gh-action-report"
version = "0.1.0"
description = "Utilize GitHub Workflow commands to output for a clean mypy report"
authors = ["Błażej Cyrzon <blazej.cyrzon@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mypy_gh_action_report"}]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development",
    "Topic :: Utilities",
]


[tool.poetry.dependencies]
python = "^3.8"
actions-toolkit = "^0.1.15"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
tox = "^3.27.0"
tox-gh-actions = "^2.10.0"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = "tests"
addopts = "-l"

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311"]
exclude = '''
(
  /(
    | \.git
    | \.idea
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
