[tool.poetry]
name = "mypy-gh-action-report"
version = "0.2.3"
description = "Notify Mypy output via GitHub Workflow Commands"
authors = ["Błażej Cyrzon <blazej.cyrzon@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mypy_gh_action_report"}]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.19.2"
github-action-utils = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
tox = "^4.31.0"
tox-gh-actions = "^3.4.0"
pytest-cov = "^7.0.0"

[tool.poetry.group.type_check.dependencies]
mypy = "^1.18.2"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = "tests"
addopts = "-l"

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312", "py313", "py314"]
exclude = '''
(
  /(
    | \.git
    | \.idea
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
profile = "black"

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
show_error_codes = true

[tool.coverage.run]
omit = [
    "mypy_gh_action_report/main.py",
]

[tool.poetry.scripts]
mypy-gh-action-report = 'mypy_gh_action_report.main:execute'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
